# motion

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libmotionconsensus.pc.in  masternode.conf
.tx/: config
build-aux/m4/: motion_find_bdb48.m4  motion_qt.m4  motion_subdir_to_include.m4
contrib/: README.md  motion-qt.pro  motiond.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  motion-qt.desktop  motion-qt.install  motion-qt.lintian-overrides  motion-qt.protocol  motion-tx.install  motiond.bash-completion  motiond.examples  motiond.install  motiond.lintian-overrides  motiond.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  (+1 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
motion-docs/: protocol-documentation.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip39.h  bip39_english.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  dsnotificationinterface.h  governance-classes.cpp  governance-classes.h  (+87 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha512.h  sph_whirlpool.c
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  modaloverlay.h  motion-qt.files  motion.cpp  motion.qrc  motion_locale.qrc  motionaddressvalidator.cpp  motionaddressvalidator.h  motionamountfield.cpp  motionamountfield.h  motiongui.cpp  motiongui.h  motionstrings.cpp  motionunits.cpp  motionunits.h  networkstyle.cpp  networkstyle.h  (+61 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: motion_bg.ts  motion_de.ts  motion_en.ts  motion_es.ts  motion_fi.ts  motion_fr.ts  motion_it.ts  motion_ja.ts  motion_pl.ts  motion_pt.ts  motion_ru.ts  motion_sk.ts  motion_sv.ts  motion_vi.ts  motion_zh_CN.ts  motion_zh_TW.ts
src/qt/res/: motion-qt-res.rc
src/qt/res/css/: light.css
src/qt/res/icons/: motion.icns
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  motionconsensus.cpp  motionconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_motion_NativeSecp256k1.c  org_motion_NativeSecp256k1.h
src/secp256k1/src/java/org/motion/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  motion-util-test.py  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  ratecheck_tests.cpp  (+24 more)
src/test/data/: README.md  motion-util-test.json  proposals-invalid.json  proposals-valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+119 files in other folders)
